--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   get:
+  sqflite: ^1.3.0
 
 dev_dependencies:
   flutter_test:
@@ -24,6 +25,7 @@ flutter:
   assets:
     - assets/
     - assets/image/
+    - assets/sql/    
 
 flutter_icons:    
   ios: true
